--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>3.10.0</version>
+            <version>3.141.0</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -70,11 +70,6 @@
             <version>1.3</version>
         </dependency>
         <dependency>
-            <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-testng</artifactId>
-            <version>2.12.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>${aspectj.version}</version>
@@ -125,6 +120,13 @@
             <artifactId>rest-assured</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.applitools/eyes-selenium-java3 -->
+        <dependency>
+            <groupId>com.applitools</groupId>
+            <artifactId>eyes-selenium-java3</artifactId>
+            <version>3.148.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -228,14 +230,6 @@
     <reporting>
         <excludeDefaults>true</excludeDefaults>
         <plugins>
-            <plugin>
-                <groupId>ru.yandex.qatools.allure</groupId>
-                <artifactId>allure-maven-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <reportDirectory>${basedir}/allure-report</reportDirectory>
-                </configuration>
-            </plugin>
         </plugins>
     </reporting>
 </project>
