--- a/src/main/resources/test_resources/application-test-version2.properties
+++ b/src/main/resources/test_resources/application-test-version2.properties
@@ -1,2 +1,3 @@
 url=https://demo.applitools.com/hackathonV2.html
 seleniumHub=http://localhost:4444/wd/hub
+applitools.api.key=5Zc1mu8RymNm15Tyyte2Q9j2xdmi9wcGPJldZmkXkwY110
